# cbsc-system-unification

./: .auto-claude-status  .env.auth.example  .env.backup  .env.dev.backup  .env.development  .env.example  .env.full  .env.memory  .env.prod  .env.template  .env.test  .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc  0700_HK_COMPLETE_BACKTEST_ANALYSIS.md  0700_hk_backtest_results_20251205_171351.json  0700_hk_optimization_report_20251129_211303.json  0700_hk_technical_analysis_report_20251124_093133.json  0700_hk_technical_analysis_report_20251124_155930.json  =2.1.0  AGENTS.md  AGENT_TODOS.md  AGX_USAGE_GUIDE.md  ALPHA_FACTOR_SYSTEM_PHASE_2_COMPLETION_REPORT.md  ANALYSIS_489_RECORDS_AND_ZERO_TRADES.md  ANALYSIS_SUMMARY.md  API_Project_Final_Summary.md  ARCHITECTURE_CLEANUP_PLAN.md  ARCHITECTURE_CONSOLIDATION_COMPLETION_REPORT.md  ARCHITECTURE_CONSOLIDATION_PLAN.md  ARCHITECTURE_ISSUES_VISUALIZATION.md  BROKER_SELECTION_AND_POC_GUIDE.md  CBSC_500_STRATEGY_FRAMEWORK_TEST_REPORT.md  CBSC_ARCHITECTURE_ANALYSIS_SUMMARY.md  CBSC_DASHBOARD_IMPLEMENTATION_COMPLETE.md  CBSC_DASHBOARD_INTEGRATION_GUIDE.md  CBSC_PERFORMANCE_DIFFERENCE_ROOT_CAUSE_ANALYSIS.md  CBSC_RESTful_API_Design_Standards.md  (+873 more)
.claude/: EPIC_STATUS_FIX_REPORT.md  TASK_VALIDATION_REPORT.md  completion-status.md  pm-sync-status.md  project-management.json  project_status.md  ralph-loop.local.md  settings.local.json  sync-analysis-2025-12-16.md  sync-report-2025-12-16.md
.github/: PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
.spec-workflow/: session.json
acquired_data/: cbsc_real_data_20251205_205342.csv  data_summary_20251205_205342.json
ai/: README.md  capabilities.json  init.sh
ai-strategy-service/: .env.example  README.md  main.py  requirements.txt
ai-strategy-vscode/: CHANGELOG.md  README.md  package-lock.json  package.json
archive/: 0388.hk_backtest_report_20251123_104418.html  0700.hk_backtest_report_20251123_104418.html  0700_hk_enhanced_analysis_with_real_gov_data_20251124_093431.json  1398.hk_backtest_report_20251123_104418.html  CODEX--system_validation_test.py  README.md  advanced_strategy_optimizer.py  apply_sharpe_fix_to_massive_optimizer.py  ascii_backtest_visualizer.py  ascii_optimized_optimizer.py  authentic_real_data_optimizer.py  backtest_0388.hk_20251123_195637.json  backtest_0941.hk_20251123_195631.json  backtest_1398.hk_20251123_195625.json  backtest_sop_final_report_20251122_190108.html  backtest_visualizer.py  balanced_risk_optimizer.py  bot_test_helper.py  clean_ascii_optimizer.py  clean_gpu_performance_test.py  clean_real_optimizer.py  clean_real_test.py  cleanup_all_phases.sh  cleanup_phase1_safe_deletions.sh  cleanup_phase2_archive_deprecated.sh  cleanup_phase3_update_gitignore.sh  complete_nonprice_backtest_0700hk.py  complete_system_demo.py  complete_system_demo_report_20251124_001046.json  complete_system_integration_test.py  comprehensive_integration_test_report.md  comprehensive_parameter_optimizer.py  comprehensive_system_test.py  comprehensive_trading_optimizer.py  correct_data_source_optimizer.py  daily_tasks_api_test_20251124_170537.json  data_source_specific_indicators_phase2_4.py  debug_phase3_multi_objective.py  deep_nonprice_backtest_system.py  deep_test_0700_hk.py  (+268 more)
backend/: AGENTS.md  README.md  __init__.py  alembic.ini  auth_fix.md  data_config.py  final_20_routes_config.py  init_database.py  main.py  main_v2.py  pytest.ini  requirements.txt  run_tests.sh  start_server.bat  start_server.sh  test_count_routes.py  test_exact_20_routes.py  test_exact_20_routes_final.py  test_exact_20_routes_v2.py  test_integration.py  test_routes_without_conflicts.py  websocket_error_handling.py
backups/: latest_backup.txt
benchmark_results/: benchmark_raw_20251228_164003.json
cbsc_strategy_sdk/: __init__.py  config.py  exceptions.py  workspace.py
config/: .salt  __init__.py  app_config.json  bot.env  cbbc_sync_config.json  config.template.yaml  config_manager.py  config_menu.py  data_adapters.json  emergency_recovery_config.json  env.example  export_config.json  feature_flags.yaml  gpu_config.json  gpu_ta_config.yaml  hk_data_sources.yaml  hk_market_config.json  hk_prompt_agents_config.json  hk_trading_symbols.json  indicators.yaml  influxdb-market-data-schema.yml  non_price_signals.yaml  rollback_config.yaml  system_config.json  test_config.json  ui_settings.json  user_preferences.json
config_service/: .env.example  .gitignore  Dockerfile  README.md  client.py  config.yaml  docker-compose.yml  init.sql  main.py  migration_tools.py  nginx.conf  prometheus.yml  requirements.txt  setup.py
dashboard-system/: integration-guide.md
data/: alpha_correlation.json  alpha_nn_backtest.csv  backtest_pro_results.csv  backtest_results.csv  bnh_full.csv  combo_factor_backtest.csv  full57_backtest.csv  hkex_daily.csv  hkex_sentiment.xlsx  indices_history.csv  sc_full.csv  southbound_30d_backtest.csv  stock_connect.csv  vbt_results.csv
docker/: .dockerignore  Dockerfile  Dockerfile.api-gateway  Dockerfile.backend  Dockerfile.backend-optimized  Dockerfile.dev  Dockerfile.frontend  Dockerfile.frontend-optimized  Dockerfile.gpu  backtest-api.dockerfile  docker-compose-backtest-v2.yml  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.ds.yml  docker-compose.security.yml  docker-compose.yml  docker-entrypoint.prod.sh  nginx.conf  prometheus.yml
docs/: AGX_IMPLEMENTATION_SUMMARY.md  AGX_USER_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS_REPORT.md  Authentication-API-v2.md  CBSC_User_Testing_Guide.md  CORE_CBSC_Strategy_Migration_Guide.md  DEPLOYMENT_GUIDE.md  FRONTEND_STRUCTURE.md  (+70 more)
sdks/python/: MANIFEST.in  README.md  pyproject.toml  setup.py  test_sdk.py
sdks/python/cbsc_trading_api/: __init__.py  client.py  exceptions.py  models.py  version.py
sdks/python/cbsc_trading_api/resources/: __init__.py  auth.py  backtests.py  market_data.py  portfolio.py  strategies.py  users.py  webhooks.py
sdks/python/examples/: basic_usage.py  quickstart.py  simple_client.py  strategy_management.py  webhook_integration.py
sdks/python/tests/: test_import.py
(+5678 files in other folders)
