# CBSC Trading System - Python Tool Configuration
# This file configures Black, isort, mypy, flake8, and bandit

[project]
name = "cbsc-trading"
version = "2.0.0"
description = "CBSC Quantitative Trading Strategy Management System"
requires-python = ">=3.10"
authors = [
    {name = "CBSC Development Team"}
]

# Black - Code Formatter
[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    # directories
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
  )/
'''

# isort - Import Sorter
[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = [
    ".git",
    ".venv",
    "venv",
    "node_modules",
    "build",
    "dist"
]
known_first_party = ["backend", "src"]
known_third_party = [
    "fastapi",
    "pydantic",
    "sqlalchemy",
    "alembic",
    "redis",
    "pytest"
]

# MyPy - Type Checker
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual adoption
disallow_incomplete_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "frontend.*",
    "unified_dashboard.*",
    "strategy_dashboard.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "test_.*"
]
disallow_untyped_defs = false

# Pytest - Test Framework
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["backend/tests", "src/tests", "persistent-context-storage/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=backend",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "auth: Authentication tests",
    "api: API tests",
    "db: Database tests"
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

# Coverage - Test Coverage
[tool.coverage.run]
source = ["backend", "src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
    "*/venv/*"
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

# Bandit - Security Linter
[tool.bandit]
exclude_dirs = [
    ".git",
    ".venv",
    "venv",
    "node_modules",
    "build",
    "dist",
    "tests"
]
skips = ["B101", "B601"]  # Skip assert_used and paramiko_calls

# Ruff - Fast Python Linter (Optional, alternative to flake8)
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "node_modules",
    "build",
    "dist",
    "__pycache__",
    "*.egg-info"
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused-import
